change ui alert count logic, spring loggning change, update readme